<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.habito.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_habits"
        android:name="com.example.habito.ui.habits.HabitsFragment"
        android:label="@string/title_habits"
        tools:layout="@layout/fragment_habits">
        
        <action
            android:id="@+id/action_habits_to_add_habit"
            app:destination="@id/addHabitFragment" />
        
        <action
            android:id="@+id/action_habits_to_edit_habit"
            app:destination="@id/editHabitFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mood"
        android:name="com.example.habito.ui.mood.MoodFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/fragment_mood">
        
        <action
            android:id="@+id/action_mood_to_add_mood"
            app:destination="@id/addMoodFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.habito.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <dialog
        android:id="@+id/addHabitFragment"
        android:name="com.example.habito.ui.habits.AddEditHabitFragment"
        android:label="@string/add_habit"
        tools:layout="@layout/fragment_add_edit_habit">
        
        <argument
            android:name="habitId"
            app:argType="string"
            app:nullable="true" />
    </dialog>

    <dialog
        android:id="@+id/editHabitFragment"
        android:name="com.example.habito.ui.habits.AddEditHabitFragment"
        android:label="@string/edit_habit"
        tools:layout="@layout/fragment_add_edit_habit">
        
        <argument
            android:name="habitId"
            app:argType="string"
            app:nullable="true" />
    </dialog>

    <fragment
        android:id="@+id/addMoodFragment"
        android:name="com.example.habito.ui.mood.AddMoodFragment"
        android:label="@string/add_mood_entry"
        tools:layout="@layout/fragment_add_mood" />

    

</navigation>